# django-playground

./: pyproject.toml
src/: db.sqlite3
src/polling_project/: settings.py  urls.py
src/polls/: models.py  tests.py  urls.py  views.py
src/polls/migrations/: 0001_initial.py
src/polls/templates/polls/: index.html  question.html  results.html
