[project]
name = "django-playground"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Abhishek Roy", email = "abhishek.roy@oxfordbraindiagnostics.com" }
]
dependencies = [
    "django>=5.0.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/django_playground"]
